--- a/Odmevko/app/src/main/AndroidManifest.xml
+++ b/Odmevko/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".PlaylistActivity" />
+        <activity android:name=".SongActivity" />
     </application>
 
 </manifest>
