da se pokaze loceno playlist pa search

--- a/Odmevko/app/src/main/AndroidManifest.xml
+++ b/Odmevko/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name=".PlaylistActivity" />
         <activity android:name=".SongActivity" />
+        <activity android:name=".ProfileActivity" />
+
     </application>
 
 </manifest>
